fix: nav scroll overflow and about page responsive layout

--- a/src/Welcome.css
+++ b/src/Welcome.css
@@ -16,6 +16,21 @@ h1 {
 	padding: 1em;
 }
 
+@media (max-width: 660px) {
+	h1 {
+		font-size: 2em;
+		line-height: 1.2em;
+		margin-top: -5em;
+	}
+}
+
+@media (max-width: 500px) {
+	h1 {
+		font-size: 1.6em;
+		line-height: 1.2em;
+	}
+}
+
 .myName {
 	color: ghostwhite;
 	font-weight: 500;
