--- a/src/main/Nav.css
+++ b/src/main/Nav.css
@@ -7,6 +7,8 @@ nav {
 	color: white;
 	background-color: var(--dayTextColor);
 	max-height: 4em;
+	overflow: auto;
+	white-space: nowrap;
 }
 
 nav span {
